fixed horizontal scrollbar bug

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -19,7 +19,6 @@ header {
   display: flex;
   justify-content: center;
   overflow: auto;
-  width: 100vw;
   overflow-x: hidden;
 }
 .container {
